# hpffp

./: README.md
1/: beta_reduce.txt
10/: ce.hs  db.hs  fold.txt  se.hs  uf.hs  wfuf.hs
11/: abfr.hs  as.hs  bt.hs  cip.hs  eiwo.hs  hdygg.hs  hr.hs  le.hs  lg.hs  pe.hs  prog.hs  ptb.hs  quad.hs  ve.hs
12/: bt.hs  ce.hs  ion.hs  iter.hs  slfe.hs  slfm.hs  vtw.hs
13/: mc.hs
13/hangman/: LICENSE  hangman.cabal
13/hangman/src/: Main.hs
14/addition/: Addition.hs  addition.cabal
14/arbitrary/: README.md  arbitrary.cabal
14/arbitrary/src/: Main.hs
14/cip/: README.md  cip.cabal
14/cip/src/: Main.hs
14/morse/: morse.cabal  package.yaml
14/morse/src/: Main.hs  Morse.hs
14/vniw/: README.md  vniw.cabal
14/vniw/src/: Main.hs
15/: mad.hs  om.hs
15/ce/: ce.cabal
15/ce/src/: Main.hs
15/monoid/: monoid.cabal
15/monoid/src/: Main.hs
15/orphan-instance/: ListyInstances.hs
16/: ReplaceExperiment.hs  ce.hs  hl.hs
16/functor/: functor.cabal
16/functor/src/: Main.hs
17/: id.hs  lu.hs
17/ce/: ce.cabal  stack.yaml
17/ce/src/: Main.hs
17/tests/: tests.cabal
17/tests/src/: Main.hs
18/: bind.hs
18/bad/: bad.cabal
18/bad/src/: Main.hs
18/ce/: README.md  hie.yaml
18/ce/src/: Main.hs
18/sum/: sum.cabal
18/sum/src/: Main.hs
19/shawty-prime/app/: Main.hs
2/: 2.hs  3.hs  ahc.hs  hts2.hs  hts3.hs  mfwf.hs
20/: ex.hs
20/ce/src/: Main.hs
21/: fold.hs  notes.hs  pipe.hs
21/ce/: ce.cabal
21/ce/src/: Main.hs  SkiFree.hs
21/httpStuff/: README.md  httpStuff.cabal
21/httpStuff/src/: Main.hs
22/: ce.hs  new.hs  rc.hs  warmup.hs
22/shawty-prime/app/: Main.hs
23/: fizz.hs
23/die/: die.cabal
23/die/src/: Main.hs
24/ce/: ce.cabal
24/ce/src/: Five.hs  Four.hs  Main.hs  Six.hs  Two.hs
24/parser/: AltParsing.hs  BT.hs  Marshalling.hs  parser.cabal
24/parser/Data/: Ini.hs
24/parser/Text/: Fractions.hs  Fractions2.hs
24/parser/src/: Main.hs
25/: bifunctor.hs  gotcha.hs
26/: EitherT.hs  ce.hs  ftc.hs  test.hs  wrap.hs
26/hit/: README.md  hit.cabal
26/hit/src/: Main.hs
26/morra/: morra.cabal
26/morra/src/: Main.hs  Main2.hs
26/myscotty/: myscotty.cabal
26/myscotty/src/: Main.hs
27/: eval.hs  sprint.hs  test.hs  test2.hs
28/: TextVsString  TextVsString.hs  TextVsString.ps  profilingSpace  profilingSpace.hs  profilingSpace.ps  profilingTime
28/bench/: VectorTest.html  bench.cabal
28/bench/src/: Bytestring.hs  Main.hs  MapVsList.hs  MapVsSet.hs  VectorTest.hs  dlist.hs  queue.hs
29/: cip  cip.hs  test.hs
29/test/: test.cabal
29/test/data/: 1.ini  2.ini
29/test/src/: Ini.hs  Main.hs
3/: bn2.hs  bn3.hs  bn4.hs  bn5.hs  bn6.hs  print1.hs  print2.hs  print3.hs
30/: async.hs  test.hs  wp  wp2  wp2.hs  writePls.hs
30/test/: test.cabal
30/test/src/: Main.hs  OurExceptions.hs
31/: test.hs
31/fingerd/: finger.db  fingerd.cabal  stack.yaml
31/fingerd/src/: AddUser.hs  Debug.hs  EditUser.hs  Main.hs
4/: 9.hs  cs.hs  ms.hs
5/: arith3broken.hs  gat.hs  sing.hs  tkd.hs
6/: dot.hs  eq.hs  tkd.hs  wcwd.hs
7/: ad.hs  arith4.hs  cp.hs  gb.hs  gd.hs  lwc.hs  vp.hs
8/: int.hs  mc.hs  niw.hs  rc.hs  rec.hs
9/: ce.hs  cip.hs  eft.hs  filt.hs  mb.hs  sc.hs  std.hs  tfs.hs  zip.hs
