name:                parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/parser#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable parser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , parsers
                     , parser

library
  exposed-modules:     Text.Fractions
                     , Text.Fractions2
                     , AltParsing
                     , Data.Ini
                     , BT
                     , Marshalling
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && <5
                     , trifecta
                     , parsers
                     , raw-strings-qq
                     , hspec
                     , text
                     , containers
                     , bytestring
                     , attoparsec
                     , parsec
                     , aeson
                     , scientific
  hs-source-dirs:      .
  default-language:    Haskell2010